actualizacion del src de las imagenes

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <!-- Portfolio Card 1 -->
             <article class="portfolio__card mix web">
               <img
-                src="/assets/portadas/Portafolio_v3.png"
+                src="./assets/portadas/Portafolio_v3.png"
                 alt=""
                 class="portfolio__img"
               />
@@ -401,7 +401,7 @@
             <!-- Portfolio Card 2 -->
             <article class="portfolio__card mix app">
               <img
-                src="/assets/portadas/Portafolio_v3_Phone.jpg"
+                src="./assets/portadas/Portafolio_v3_Phone.jpg"
                 alt=""
                 class="portfolio__img"
               />
@@ -435,7 +435,7 @@
             <!-- Portfolio Card 3 -->
             <article class="portfolio__card mix app">
               <img
-                src="/assets/portadas/Portafolio_v2.jpg"
+                src="./assets/portadas/Portafolio_v2.jpg"
                 alt=""
                 class="portfolio__img"
               />
@@ -469,7 +469,7 @@
             <!-- Portfolio Card 4 -->
             <article class="portfolio__card mix design">
               <img
-                src="/assets/portadas/Negocio_1.jpg"
+                src="./assets/portadas/Negocio_1.jpg"
                 alt=""
                 class="portfolio__img"
               />
@@ -503,7 +503,7 @@
             <!-- Portfolio Card 5 -->
             <article class="portfolio__card mix design">
               <img
-                src="/assets/portadas/Negocio_2.jpg"
+                src="./assets/portadas/Negocio_2.jpg"
                 alt=""
                 class="portfolio__img"
               />
@@ -537,7 +537,7 @@
             <!-- Portfolio Card 6 -->
             <article class="portfolio__card mix web design">
               <img
-                src="/assets/portadas/Portafolio_v1.jpg"
+                src="./assets/portadas/Portafolio_v1.jpg"
                 alt=""
                 class="portfolio__img"
               />
@@ -581,7 +581,7 @@
             </span>
             <div class="portfolio__img__container">
               <img
-                src="assets/Portadas/Portafolio_v1.jpg"
+                src="./assets/Portadas/Portafolio_v1.jpg"
                 class="portfolio__popup-img"
               />
             </div>
