cambio en los links atributo: _blank

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                     Vista -
                     <span
                       ><a
+                        target="_blank"
                         href="https://marcos-pines1.github.io/portafolio-de-paginas-web/portafolio-3/"
                         >Portafolio 3</a
                       ></span
@@ -478,6 +479,7 @@
                     Vista -
                     <span
                       ><a
+                        target="_blank"
                         href="https://marcos-pines1.github.io/portafolio-de-paginas-web/portafolio-2/"
                         >Portafolio 2</a
                       ></span
@@ -518,6 +520,7 @@
                     Vista -
                     <span
                       ><a
+                        target="_blank"
                         href="https://marcos-pines1.github.io/portafolio-de-paginas-web/negocio-1/"
                         >Landing tipo negocio 1</a
                       ></span
@@ -556,6 +559,7 @@
                     Vista -
                     <span
                       ><a
+                        target="_blank"
                         href="https://marcos-pines1.github.io/portafolio-de-paginas-web/negocio-2/"
                         >Landing tipo negocio 2</a
                       ></span
@@ -596,6 +600,7 @@
                     Vista -
                     <span
                       ><a
+                        target="_blank"
                         href="https://marcos-pines1.github.io/portafolio-de-paginas-web/portafolio-1/"
                         >Portafolio 1</a
                       ></span
