eliminar el scrollreveal

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                   <li>Tecnologias - <span>HTML5, CSS y JavaScript</span></li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
-                    Vista - <span><a href="#">www.domain.com</a></span>
+                    Vista - <span><a href="">No funciona</a></span>
                   </li>
                 </ul>
               </aside>
@@ -996,9 +996,6 @@
       <i class="ri-arrow-up-s-line"></i>
     </a>
   </body>
-
-  <!--================= Scroll Reveal =================-->
-  <script src="js/scrollreveal.min.js"></script>
 
   <!--================= Mixitup js =================-->
   <script src="js/mixitup.min.js"></script>
