eliminar el scrollreveal.js y cambiar los botones del portfolio

--- a/index.html
+++ b/index.html
@@ -390,10 +390,7 @@
               />
               <h3 class="portfolio__title">Portafolio Web</h3>
               <h4 class="portfolio__subtitle">Landing page tipo portafolio</h4>
-              <span class="portfolio__button btn-2">
-                Mas
-                <i class="ri-add-line"></i>
-              </span>
+              <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
                 <h3 class="details__title">Landing page tipo portafolio</h3>
                 <p class="details__description">
@@ -428,10 +425,7 @@
               />
               <h3 class="portfolio__title">Landing Page de Informacion</h3>
               <h4 class="portfolio__subtitle">Página Web de info</h4>
-              <span class="portfolio__button btn-2">
-                Mas
-                <i class="ri-add-line"></i>
-              </span>
+              <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
                 <h3 class="details__title">Página Web de info</h3>
                 <p class="details__description">
@@ -460,10 +454,7 @@
               />
               <h3 class="portfolio__title">Portafolio Web</h3>
               <h4 class="portfolio__subtitle">Landing page tipo portafolio</h4>
-              <span class="portfolio__button btn-2">
-                Mas
-                <i class="ri-add-line"></i>
-              </span>
+              <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
                 <h3 class="details__title">Landing page tipo portafolio</h3>
                 <p class="details__description">
@@ -500,10 +491,7 @@
               <h4 class="portfolio__subtitle">
                 The services provide for design
               </h4>
-              <span class="portfolio__button btn-2">
-                Mas
-                <i class="ri-add-line"></i>
-              </span>
+              <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
                 <h3 class="details__title">The services provide for design</h3>
                 <p class="details__description">
@@ -539,10 +527,7 @@
               />
               <h3 class="portfolio__title">Landing Page de Negocio</h3>
               <h4 class="portfolio__subtitle">Página Web Para Negocios</h4>
-              <span class="portfolio__button btn-2">
-                Mas
-                <i class="ri-add-line"></i>
-              </span>
+              <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
                 <h3 class="details__title">Página Web Para Negocios</h3>
                 <p class="details__description">
@@ -580,10 +565,7 @@
               <h4 class="portfolio__subtitle">
                 The services provide for design
               </h4>
-              <span class="portfolio__button btn-2">
-                Mas
-                <i class="ri-add-line"></i>
-              </span>
+              <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
                 <h3 class="details__title">Landing page tipo portafolio</h3>
                 <p class="details__description">
