Actualizacion de portafolio

--- a/index.html
+++ b/index.html
@@ -370,10 +370,13 @@
           <!-- Portfolio Filter -->
           <article class="portfolio__filters">
             <span class="portfolio__item active-item" data-filter="all">
-              All
+              Todo
             </span>
             <span class="portfolio__item" data-filter=".portafolio-web"
               >Portafolio</span
+            >
+            <span class="portfolio__item" data-filter=".sitio-web"
+              >Sitio Web</span
             >
             <span class="portfolio__item" data-filter=".info">Info</span>
             <span class="portfolio__item" data-filter=".negocio">Negocio</span>
@@ -399,7 +402,7 @@
                   al español sin problema, cuenta con modo oscuro y claro.
                 </p>
                 <ul class="details__info">
-                  <li>Creado - <span>15 abril 2024</span></li>
+                  <li>Creado - <span>15 de abril 2024</span></li>
                   <li>Tecnologias - <span>HTML, CSS y JS</span></li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
@@ -417,29 +420,40 @@
             </article>
 
             <!-- Portfolio Card 2 -->
-            <article class="portfolio__card mix info">
+            <article class="portfolio__card mix info sitio-web">
               <img
-                src="./assets/portadas/portafolio_v3_Phone.jpg"
+                src="./assets/portadas/sitio-web-portada.png"
                 alt="Imagen de portafolio v3 mobil vista"
                 class="portfolio__img"
               />
-              <h3 class="portfolio__title">Landing Page de Informacion</h3>
-              <h4 class="portfolio__subtitle">Página Web de info</h4>
+              <h3 class="portfolio__title">Sitio Web</h3>
+              <h4 class="portfolio__subtitle">Sitio Web de Producto</h4>
               <span class="portfolio__button btn-2"> Mas + </span>
               <aside class="portfolio__item-details">
-                <h3 class="details__title">Página Web de info</h3>
+                <h3 class="details__title">Sitio Web de Producto</h3>
                 <p class="details__description">
-                  Pagina web completamente personalizable por empresa o cliente
-                  con un negocio, posee una barra lateral que te lleva a las
-                  secciones que aprietes, 4 secciones(Home, info, Images y
-                  Form).
+                  Sitio Web, inspirado en la placa de video de Aorus, esta
+                  cuenta con 3 paginas, full Responsive cada una, utiliza varias
+                  animaciones y frameworks de javascript y Bootstrap. Posee
+                  optimizacion de codigo en SEO. <br />
+                  Se utilizaron los lenguajes de programacion como HTML5, CSS,
+                  SASS y JavaScript.
                 </p>
                 <ul class="details__info">
-                  <li>Creado - <span>15 abril 2024</span></li>
-                  <li>Tecnologias - <span>HTML5, CSS y JavaScript</span></li>
+                  <li>Creado - <span>27 de Julio 2024</span></li>
+                  <li>
+                    Tecnologias -
+                    <span>SEO, HTML, CSS, SASS, JavaScript y Bootstrap.</span>
+                  </li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
-                    Vista - <span><a href="">No funciona</a></span>
+                    Vista -
+                    <span
+                      ><a
+                        href="https://marcos-pines1.github.io/portafolio-de-paginas-web/pagina-inspiracion/"
+                        >Sitio Web</a
+                      ></span
+                    >
                   </li>
                 </ul>
               </aside>
@@ -463,7 +477,7 @@
                   aprietes, 5 secciones(Home, about, services, works y Form).
                 </p>
                 <ul class="details__info">
-                  <li>Creado - <span>10 noviembre 2023</span></li>
+                  <li>Creado - <span>10 de noviembre 2023</span></li>
                   <li>Tecnologias - <span>HTML, CSS y JS</span></li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
@@ -501,7 +515,7 @@
                   Form).
                 </p>
                 <ul class="details__info">
-                  <li>Creado - <span>20 diciembre 2023</span></li>
+                  <li>Creado - <span>20 de diciembre 2023</span></li>
                   <li>Tecnologias - <span>HTML, CSS y JS</span></li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
@@ -537,7 +551,7 @@
                   Form).
                 </p>
                 <ul class="details__info">
-                  <li>Creado - <span>5 enero 2024</span></li>
+                  <li>Creado - <span>5 de enero 2024</span></li>
                   <li>Tecnologias - <span>HTML, CSS y JS</span></li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
@@ -575,7 +589,7 @@
                   testimonios y formulario).
                 </p>
                 <ul class="details__info">
-                  <li>Creado - <span>20 febrero 2024</span></li>
+                  <li>Creado - <span>20 de febrero 2024</span></li>
                   <li>Tecnologias - <span>HTML, CSS y JS</span></li>
                   <li>Rol - <span>Frontend</span></li>
                   <li>
