agregado de mi imagen

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="about__container">
             <!-- About image -->
             <aside class="about__img">
-              <img src="" alt="Imagen de Marcos" />
+              <img src="assets/imagen-mia.jpg" alt="Imagen de Marcos" />
             </aside>
             <article class="about__content">
               <h3>Hola, soy Marcos Morua, residente de Argentina.</h3>
