estilos en la imagen

--- a/index.html
+++ b/index.html
@@ -146,8 +146,12 @@
           <h2 data-heading="Introduccion" class="section__title">Sobre mi</h2>
           <div class="about__container">
             <!-- About image -->
-            <aside class="about__img">
-              <img src="assets/imagen-mia.jpg" alt="Imagen de Marcos" />
+            <aside class="about__img__container">
+              <img
+                class="about__img"
+                src="assets/imagen-mia.jpg"
+                alt="Imagen de Marcos"
+              />
             </aside>
             <article class="about__content">
               <h3>Hola, soy Marcos Morua, residente de Argentina.</h3>
