cambios en los portafolios

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
             </article>
 
             <!-- Portfolio Card 4 -->
-            <article class="portfolio__card mix negocio">
+            <article class="portfolio__card mix negocio info">
               <img
                 src="./assets/portadas/negocio_1.jpg"
                 alt="imagen de negocio 1"
@@ -537,7 +537,7 @@
             </article>
 
             <!-- Portfolio Card 5 -->
-            <article class="portfolio__card mix negocio">
+            <article class="portfolio__card mix negocio info">
               <img
                 src="./assets/portadas/negocio_2.jpg"
                 alt="imagen de negocio 2"
