links descriptivos con animacion y cambio en los colores

--- a/index.html
+++ b/index.html
@@ -3,13 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio Marcos Morua</title>
 
     <!--================= Meta Etiquetas =================-->
 
+    <meta
+      name="description"
+      content="Hola mi nombre es Marcos Morua, Programador Frontend"
+    />
+    <meta
+      name="keywords"
+      content="Portafolio, Programacion, Desarrollo, web, Desarrollo web, diseñador web, maquetacion, maquetador web, Marcos Morua, Marcos, Morua, Portafolio Personal"
+    />
+    <meta name="theme-color" content="#1A1A1A" />
+    <meta property="og.title" content="AORUS Radeon™ RX 6900" />
+    <meta
+      property="og.description"
+      content="Hola mi nombre es Marcos Morua, Programador Frontend"
+    />
+    <!-- meta twitter y opengraft  -->
+    <meta name="twitter:card" content="summary" />
+    <meta
+      property="og:title"
+      name="twitter:title"
+      content="Portafolio Web Marcos Morua"
+    />
+    <meta
+      property="og:image"
+      name="twitter:image"
+      content="https://marcos-pines1.github.io/portafolio-marcos-morua/assets/portadas/portafolio_v3.png"
+    />
+    <meta
+      property="og:url"
+      name="twitter:url"
+      content="https://marcos-pines1.github.io/portafolio-marcos-morua"
+    />
+    <meta
+      property="og:description"
+      name="twitter:description"
+      content="Hola mi nombre es Marcos Morua, Programador Frontend"
+    />
+    <meta property="og.type" content="website" />
+
     <!--================= Links =================-->
 
+    <!-- Ruta canonica -->
+
+    <link
+      rel="canonical"
+      href="https://marcos-pines1.github.io/portafolio-marcos-morua"
+    />
+
     <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      href="https://marcos-pines1.github.io/portafolio-marcos-morua/assets/logo.svg"
+    />
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon" />
 
     <!-- Remixicons -->
@@ -112,17 +161,41 @@
         <article class="home__social">
           <span class="home__social-follow">Sigueme</span>
           <div class="home__social-links grid">
-            <a href="#" target="_blank" class="home__social-link">
+            <a
+              href="https://github.com/Marcos-Pines1"
+              target="_blank"
+              rel="noopender noreferrer"
+              class="home__social-link link-relative"
+            >
               <i class="ri-github-line"></i>
+              <span class="link-description">GitHub</span>
             </a>
-            <a href="#" target="_blank" class="home__social-link">
-              <i class="ri-instagram-line"></i>
+            <a
+              href="https://www.freelancer.com.ar/u/MarcosPines"
+              target="_blank"
+              rel="noopender noreferrer"
+              class="home__social-link link-relative"
+            >
+              <i class="ri-facebook-line"></i>
+              <span class="link-description">Freelancer</span>
             </a>
-            <a href="#" target="_blank" class="home__social-link">
-              <i class="ri-twitter-line"></i>
-            </a>
-            <a href="#" target="_blank" class="home__social-link">
+            <a
+              href="https://www.linkedin.com/in/marcos-morua-a7b326295"
+              target="_blank"
+              rel="noopender noreferrer"
+              class="home__social-link link-relative"
+            >
               <i class="ri-linkedin-line"></i>
+              <span class="link-description">LinkedIn</span>
+            </a>
+            <a
+              href="https://api.whatsapp.com/send?phone=2804031239"
+              target="_blank"
+              rel="noopender noreferrer"
+              class="home__social-link link-relative"
+            >
+              <i class="ri-whatsapp-fill"></i>
+              <span class="link-description">WhatsApp</span>
             </a>
           </div>
         </article>
@@ -284,9 +357,18 @@
               <div class="skills__progress">
                 <div>
                   <p>CSS</p>
-                  <p>80%</p>
+                  <p>90%</p>
                 </div>
-                <progress value="80" min="0" max="100"></progress>
+                <progress value="90" min="0" max="100"></progress>
+              </div>
+
+              <!-- Progress div -->
+              <div class="skills__progress">
+                <div>
+                  <p>SASS</p>
+                  <p>85%</p>
+                </div>
+                <progress value="85" min="0" max="100"></progress>
               </div>
 
               <!-- Progress div -->
@@ -427,7 +509,7 @@
             <article class="portfolio__card mix info sitio-web">
               <img
                 src="./assets/portadas/sitio-web-portada.png"
-                alt="Imagen de portafolio v3 mobil vista"
+                alt="Imagen de la portada del sitio web inspirado en AORUS"
                 class="portfolio__img"
               />
               <h3 class="portfolio__title">Sitio Web</h3>
@@ -855,14 +937,32 @@
             <h3 class="social__title">Mis Redes</h3>
             <p class="social__paragraph">¡Sigueme y Contactame por aqui!</p>
             <aside class="social__container">
-              <a href="#">
-                <i class="ri-instagram-line"></i>
+              <a
+                href="https://www.freelancer.com.ar/u/MarcosPines"
+                target="_blank"
+                rel="noopender noreferrer"
+                class="link-relative"
+              >
+                <i class="ri-facebook-line"></i>
+                <span class="link-description">Freelancer</span>
               </a>
-              <a href="#">
+              <a
+                href="https://github.com/Marcos-Pines1"
+                target="_blank"
+                rel="noopender noreferrer"
+                class="link-relative"
+              >
                 <i class="ri-github-line"></i>
+                <span class="link-description">GitHub</span>
               </a>
-              <a href="#">
+              <a
+                href="https://www.linkedin.com/in/marcos-morua-a7b326295"
+                target="_blank"
+                rel="noopender noreferrer"
+                class="link-relative"
+              >
                 <i class="ri-linkedin-box-line"></i>
+                <span class="link-description">LinkedIn</span>
               </a>
             </aside>
           </article>
@@ -966,17 +1066,41 @@
 
         <!-- Footer Social links -->
         <article class="social__container">
-          <a href="#">
-            <i class="ri-facebook-box-line"></i>
+          <a
+            class="link-relative"
+            href="https://www.freelancer.com.ar/u/MarcosPines"
+            target="_blank"
+            rel="noopender noreferrer"
+          >
+            <i class="ri-facebook-line"></i>
+            <span class="link-description">Freelancer</span>
           </a>
-          <a href="#">
-            <i class="ri-instagram-line"></i>
+          <a
+            class="link-relative"
+            href="https://api.whatsapp.com/send?phone=2804031239"
+            target="_blank"
+            rel="noopender noreferrer"
+          >
+            <i class="ri-whatsapp-fill"></i>
+            <span class="link-description">WhatsApp</span>
           </a>
-          <a href="#">
+          <a
+            class="link-relative"
+            href="https://github.com/Marcos-Pines1"
+            target="_blank"
+            rel="noopender noreferrer"
+          >
             <i class="ri-github-line"></i>
+            <span class="link-description">GitHub</span>
           </a>
-          <a href="#">
+          <a
+            class="link-relative"
+            href="https://www.linkedin.com/in/marcos-morua-a7b326295"
+            target="_blank"
+            rel="noopender noreferrer"
+          >
             <i class="ri-linkedin-box-line"></i>
+            <span class="link-description">LinkedIn</span>
           </a>
         </article>
       </section>
