rellenar la informacion de los servicios

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                     Vista -
                     <span
                       ><a
+                        target="_blank"
                         href="https://marcos-pines1.github.io/portafolio-de-paginas-web/pagina-inspiracion/"
                         >Sitio Web</a
                       ></span
@@ -749,8 +750,10 @@
                 <i class="ri-code-box-line services__icon"></i>
                 <h3 class="services__title">Diseño Web</h3>
                 <p class="services__description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                  vel nisi in justo tristique tincidunt.
+                  Ofrezco servicios de diseño web personalizados que garantizan
+                  una experiencia de usuario intuitiva y atractiva. Me
+                  especializo en crear sitios web responsivos y optimizados para
+                  SEO.
                 </p>
                 <a href="#servicio-1" class="services__link">
                   Mas info
@@ -766,8 +769,10 @@
                 <i class="ri-database-2-line services__icon"></i>
                 <h3 class="services__title">Back-End</h3>
                 <p class="services__description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                  vel nisi in justo tristique tincidunt.
+                  Proporciono soluciones de back-end robustas y escalables
+                  utilizando las últimas tecnologías. Mi enfoque es garantizar
+                  la seguridad, eficiencia y rendimiento de las aplicaciones
+                  web.
                 </p>
                 <a href="#servicio-2" class="services__link">
                   Mas info
@@ -783,8 +788,9 @@
                 <i class="ri-smartphone-line services__icon"></i>
                 <h3 class="services__title">Diseño UI/UX</h3>
                 <p class="services__description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                  vel nisi in justo tristique tincidunt.
+                  Ofrezco servicios de diseño UI/UX centrados en el usuario para
+                  crear interfaces intuitivas y atractivas. Utilizo herramientas
+                  modernas para prototipado y diseño.
                 </p>
                 <a href="#servicio-3" class="services__link">
                   Mas info
@@ -811,25 +817,30 @@
               <i class="ri-code-box-line services__icon"></i>
               <h3 class="services__title">Diseño Web</h3>
               <p class="services__description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                vel nisi in justo tristique tincidunt.
+                Ofrezco servicios de diseño web personalizados que garantizan
+                una experiencia de usuario intuitiva y atractiva. Me especializo
+                en crear sitios web responsivos y optimizados para SEO.
               </p>
               <ul class="modal__list">
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Web design</p>
+                  <p>Diseño Responsivo</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Con plantillas personalizadas</p>
+                  <p>SEO Optimizado</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Full Responsive</p>
+                  <p>UX/UI Integrado</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Para todos los dispositivos</p>
+                  <p>Velocidad de Carga</p>
+                </li>
+                <li>
+                  <i class="ri-checkbox-circle-line"></i>
+                  <p>Mantenimiento Web</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
@@ -854,25 +865,30 @@
               <i class="ri-database-2-line services__icon"></i>
               <h3 class="services__title">Back-End</h3>
               <p class="services__description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                vel nisi in justo tristique tincidunt.
+                Proporciono soluciones de back-end robustas y escalables
+                utilizando las últimas tecnologías. Mi enfoque es garantizar la
+                seguridad, eficiencia y rendimiento de las aplicaciones web.
               </p>
               <ul class="modal__list">
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Back-End</p>
+                  <p>API RESTful</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Con plantillas personalizadas</p>
+                  <p>Seguridad de Datos</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Full Responsive</p>
+                  <p>Bases de Datos SQL</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Para todos los dispositivos</p>
+                  <p>Integración de Servicios</p>
+                </li>
+                <li>
+                  <i class="ri-checkbox-circle-line"></i>
+                  <p>Despliegue en Servidores</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
@@ -897,25 +913,30 @@
               <i class="ri-smartphone-line services__icon"></i>
               <h3 class="services__title">Diseño UI/UX</h3>
               <p class="services__description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                vel nisi in justo tristique tincidunt.
+                Ofrezco servicios de diseño UI/UX centrados en el usuario para
+                crear interfaces intuitivas y atractivas. Utilizo herramientas
+                modernas para prototipado y diseño.
               </p>
               <ul class="modal__list">
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Diseño UI/Ux</p>
+                  <p>Prototipos Interactivos</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Con plantillas personalizadas</p>
+                  <p>Pruebas de Usuario</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Todas las vistas</p>
+                  <p>Diseño de Interfaces</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
-                  <p>Para todos los dispositivos</p>
+                  <p>Identidad Visual</p>
+                </li>
+                <li>
+                  <i class="ri-checkbox-circle-line"></i>
+                  <p>Flujos de Usuario</p>
                 </li>
                 <li>
                   <i class="ri-checkbox-circle-line"></i>
