cambio en el numero

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
             Contactame
           </a>
 
-          <h4>My Address</h4>
+          <h4>Mi Direccion</h4>
 
-          <address>3287 Indiana Avenue, Waialua, Hawaii</address>
+          <address>Av. Roca 608, Puerto Madryn, Chubut</address>
 
           <p>
-            Urgent issue? call us at
-            <a href="tel:8085613846">808-561-3846</a>
+            Urgente? llamame al
+            <a href="tel:5492804031239">+54 9 280 403-1239</a>
           </p>
         </aside>
       </nav>
@@ -189,7 +189,7 @@
               <span class="link-description">LinkedIn</span>
             </a>
             <a
-              href="https://api.whatsapp.com/send?phone=2804031239"
+              href="https://api.whatsapp.com/send?phone=5492804031239"
               target="_blank"
               rel="noopender noreferrer"
               class="home__social-link link-relative"
@@ -968,13 +968,13 @@
                 <span class="link-description">Freelancer</span>
               </a>
               <a
-                href="https://github.com/Marcos-Pines1"
+                class="link-relative"
+                href="https://api.whatsapp.com/send?phone=5492804031239"
                 target="_blank"
                 rel="noopender noreferrer"
-                class="link-relative"
               >
-                <i class="ri-github-line"></i>
-                <span class="link-description">GitHub</span>
+                <i class="ri-whatsapp-fill"></i>
+                <span class="link-description">WhatsApp</span>
               </a>
               <a
                 href="https://www.linkedin.com/in/marcos-morua-a7b326295"
@@ -1098,7 +1098,7 @@
           </a>
           <a
             class="link-relative"
-            href="https://api.whatsapp.com/send?phone=2804031239"
+            href="https://api.whatsapp.com/send?phone=5492804031239"
             target="_blank"
             rel="noopender noreferrer"
           >
